novas rotas para Admin

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,7 +58,7 @@ play.modules {
   # explicitly below.
   # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
-  #enabled += modules.Module
+  enabled += modules.Module
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
 }
@@ -366,8 +366,6 @@ db {
 grobid.home = "grobid-home"
 grobid.properties = "grobid-home/config/grobid.properties"
 
-documentSearcher = services.search.MicrosoftAcademicSearcher
-#documentSearcher = services.search.PapersIndexSearcher
+documentSearcher = services.search.LocalDocumentSearcher
 
-# Microsoft Academic Search API Ocp-Apim-Subscription-Key
-Ocp-Apim-Subscription-Key = "7b8b69fc65be4955bb7b19951badb2d0"
+documentParser = services.parsers.GrobIDDocumentParser
