--- a/project/build.properties
+++ b/project/build.properties
@@ -2,4 +2,4 @@
 #Mon Sep 05 18:51:25 BRT 2016
 template.uuid=c373963b-f5ad-433b-8e74-178e7ae25b1c
 sbt.version=0.13.11
-EclipseKeys.preTasks := Seq(compile in Compile)
+#EclipseKeys.preTasks := Seq(compile in Compile)
