Removed local settings

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -346,10 +346,10 @@ db {
 
   default.driver = org.postgresql.Driver
   default.driverClassName = org.postgresql.Driver
-  default.url = "jdbc:postgresql://localhost/petrica"
-  default.jdbcUrl = "jdbc:postgresql://localhost/petrica"
-  default.username = postgres
-  default.password = "kurt1234"
+  default.url = "jdbc:postgresql://localhost/"
+  default.jdbcUrl = "jdbc:postgresql://localhost/"
+  default.username = ""
+  default.password = ""
 	
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
   #default.driver = org.h2.Driver
@@ -362,10 +362,11 @@ db {
   #default.logSql=true
 }
 
-# Grobid settings
-grobid.home = "grobid-home"
-grobid.properties = "grobid-home/config/grobid.properties"
-
+# Document parser class
 documentSearcher = services.search.LocalDocumentSearcher
 
-documentParser = services.parsers.GrobIDDocumentParser
+# Minimum number that a term must appear in documents 
+# to be used to build frequency matrix as a percentage
+# (terms that appears too sparsely - < minPercentOfTerms - will
+# be remove from frequency matrix) 
+minPercentOfTerms = 0.01
