--- a/conf/application.conf
+++ b/conf/application.conf
@@ -346,10 +346,10 @@ db {
 
   default.driver = org.postgresql.Driver
   default.driverClassName = org.postgresql.Driver
-  default.url = "jdbc:postgresql://localhost/"
-  default.jdbcUrl = "jdbc:postgresql://localhost/"
-  default.username = ""
-  default.password = ""
+  default.url = "jdbc:postgresql://localhost/petrica_db"
+  default.jdbcUrl = "jdbc:postgresql://localhost/petrica_db"
+  default.username = "postgres"
+  default.password = "kurt1234"
 	
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
   #default.driver = org.h2.Driver
